@@ -1,3 +1,10 @@
+2007-10-04  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* Makefile.am (gzip.doc.gz, check-local): Depend on $(bin_PROGRAMS).
+	(gzip.doc.gz): Use our gzip, not the system-installed one.
+	Problem reported by Chris Staub in
+	<http://lists.gnu.org/archive/html/bug-gzip/2007-10/msg00000.html>.
+
 2007-07-03  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* COPYING: Update to GPLv3.  All uses changed.
